--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # app-specific
-fastapi==0.110.1
-uvicorn==0.29.0
+fastapi==0.110.1 # web framework for building APIs with Python 3.8+
+uvicorn==0.29.0 # ASGI server for FastAPI
+pydantic==2.6.4 # data validation library using Python type hints
 
 # ai - langchain, openai, huggingface
